added routes for individual petitions and loading/404 pages

--- a/client/templates/peitions/petition_item.html
+++ b/client/templates/peitions/petition_item.html
@@ -1,7 +1,7 @@
 <template name="petitionItem">
   <div class="petition">
     <div class="petition-content">
-      <h3><a href="{{url}}">{{title}}</a><span>{{username}}</span></h3>
+      <h3><a href="{{pathFor 'petitionPage'}}">{{title}}</a><span>{{username}}</span></h3>
     </div>
   </div>
 </template>
