you can submit and edit petitions

--- a/client/templates/peitions/petition_item.html
+++ b/client/templates/peitions/petition_item.html
@@ -1,7 +1,11 @@
 <template name="petitionItem">
   <div class="petition">
     <div class="petition-content">
-      <h3><a href="{{pathFor 'petitionPage'}}">{{title}}</a><span>{{username}}</span></h3>
+      <h3><a href="{{pathFor 'petitionPage'}}">{{title}}</a><span>{{description}}</span></h3>
+      <p>
+        submitted by {{username}}
+        {{#if ownPetition}}<a href="{{pathFor 'petitionEdit'}}">Edit</a>{{/if}}
+      </p>
     </div>
   </div>
 </template>
